[package]
name = "learn-actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3.3", features = ["rustls"] }
derive_more = "0.99.17"
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.14"
rustls = "0.20.3"
rustls-pemfile = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
